# candidate-recommendation-engine

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
